# credit-tranche-copula-pricer

./: README.md  pyproject.toml
credit_copula/: __init__.py  base_correlation.py  conventions.py  copula.py  diagnostics.py  market_data.py  numerics.py  portfolio.py  pricer.py  quotes.py  reporting.py  tranche.py
dashboard/: charts.py  generate_dashboard.py  illustrations.py  layout.py
examples/: index_tranche_example.py
tests/: conftest.py  test_base_correlation.py  test_conventions.py  test_copula.py  test_dashboard_smoke.py  test_diagnostics.py  test_examples_smoke.py  test_market_data.py  test_numerics.py  test_portfolio.py  test_pricer.py  test_quotes.py  test_reporting.py  test_tranche.py
