[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-copula"
version = "0.1.0"
description = "Gaussian copula pricer for synthetic CDO / credit index tranches"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Quantitative Research" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
dashboard = ["plotly>=5.18"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: full end-to-end smoke tests (example script, dashboard generation) excluded from the default run; invoke explicitly with `pytest -m slow`.",
]
